# STXSCategorizer

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp
Categorize/: BuildFile.xml  CMakeLists.txt
Categorize/src/: Preprocess.cpp  STXS_categorization0.cpp  STXS_categorization1p2.cpp  STXS_categorization1p3.cpp  STXS_common.cpp  STXS_script.cpp  parseArgs.cpp
CategorizeBDT/: CMakeLists.txt  package.nix
CommonUtils/: BuildFile.xml  CMakeLists.txt
CommonUtils/interface/: Preprocess.h
CommonUtils/src/: Discriminants.cc  Preprocess.cpp  cConstants.cc
interface/: STXS_common.h  cConstants.h
src/: Discriminants.cc  Preprocess.cpp  STXS_Filter.cpp  STXS_categorization0.cpp  STXS_categorization1p2.cpp  STXS_categorization1p3.cpp  STXS_common.cpp  STXS_script.cpp  cConstants.cc  parseArgs.cpp
